# browsr

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
config/: server.toml
src/: api.rs  config.rs  main.rs  protocol.rs  state.rs  ws_ext.rs
